Ensure Polling Station names/info stay readable
By ensuring the title does not break, this should also ensure all
Polling Station cells do not become squashed and hard to read.

The `min-width` set here is more than is needed for this page, but this
should cover the other imminent width-expanded changes too.

--- a/app/assets/stylesheets/layout/organiser_dashboard.scss
+++ b/app/assets/stylesheets/layout/organiser_dashboard.scss
@@ -5,7 +5,7 @@ html {
   // Ensure rest of page is always at least as big as minimum size main
   // dashboard table will shrink to, so header will still cover full page width
   // in this case.
-  min-width: 900px;
+  min-width: 1200px;
 }
 
 // Override Bulma style so all cells are vertically centred by default; in
